# redland-bindings

./: .cvsignore  .gitignore  AUTHORS  ChangeLog  ChangeLog.1  ChangeLog.10  ChangeLog.11  ChangeLog.12  ChangeLog.13  ChangeLog.2  ChangeLog.3  ChangeLog.4  ChangeLog.5  ChangeLog.6  ChangeLog.7  ChangeLog.8  ChangeLog.9  INSTALL.html  LICENSE.html  Makefile.PL  Makefile.am  NEWS.html  README.html  RELEASE.html  TODO.html  autogen.sh  bindings.rdf.in  configure.ac  redland-bindings.pc.in  redland-bindings.spec.in
R/: Dockerfile  Makefile.am  README.md  Redland.R.in  Redland.i  createLibrdfDocs.R  librdfFunction.brew
R/redland/: .Rbuildignore  DESCRIPTION  NAMESPACE  NEWS  README.md  configure  cran-comments.md
R/redland/R/: Node.R  Query.R  QueryResults.R  Serializer.R  Statement.R  World.R  mergeNamespace_roclet.R  redland-package.R  redland.R
R/redland/inst/: CITATION  COPYRIGHTS  NOTICE  WORDLIST
R/redland/man/: Model-class.Rd  Model-initialize.Rd  Node-class.Rd  Node-initialize.Rd  Parser-class.Rd  Parser-initialize.Rd  Query-class.Rd  Query-initialize.Rd  QueryResults-class.Rd  QueryResults-initialize.Rd  Serializer-class.Rd  Serializer-initialize.Rd  Statement-class.Rd  Statement-initialize.Rd  Storage-class.Rd  Storage-initialize.Rd  World-class.Rd  World-initialize.Rd  addStatement.Rd  executeQuery.Rd  freeModel.Rd  freeParser.Rd  freeQuery.Rd  freeQueryResults.Rd  freeSerializer.Rd  freeStatement.Rd  freeStorage.Rd  freeWorld.Rd  getBlankNodeId.Rd  getNodeType.Rd  getNodeValue.Rd  getQueryResultsLimit.Rd  getResults.Rd  getTermType.Rd  is.null.externalptr.Rd  length-SWIGArray-method.Rd  librdf_copyright_string.Rd  librdf_copyright_string_get.Rd  librdf_digest_final.Rd  librdf_digest_init.Rd  (+218 more)
R/redland/src/: Makevars.in  Makevars.win  redland.c  util.c
R/redland/vignettes/: redland_overview.Rmd
ada/: Makefile.am  README  TASKS  TODO  librdf.gpr  main_test.adb  test.gpr
ada/aunit-3.7.0w/: CHANGES  Makefile  README  version_information
ada/aunit-3.7.0w/docs/: aunit.html  aunit.info  aunit.texi  aunit.txt  version.texi
ada/aunit-3.7.0w/test/: Makefile  aunit_tests.gpr.in
ada/libaunit-3.7.2/: CHANGES  features-32  features-33  features-34  features-35  features-36  features-37  known-problems-31  known-problems-32  known-problems-34  known-problems-35  known-problems-36  version_information
ada/libaunit-3.7.2/.pc/: applied-patches
ada/libaunit-3.7.2/debian/: README.Debian  README.source  ada_libraries  changelog  control  copyright  install  rules  (+6 more)
ada/src/: rdf-auxilary-c_string_holders.adb  rdf-auxilary-c_string_holders.ads  rdf-auxilary-handled_record.adb  rdf-auxilary-handled_record.ads  rdf-auxilary-limited_handled_record.adb  rdf-auxilary-limited_handled_record.ads  rdf-auxilary-my_indefinite_holders.adb  rdf-auxilary-my_indefinite_holders.ads  rdf-auxilary-simple_handled_record.ads  rdf-auxilary-simple_limited_handled_record.ads  rdf-auxilary.adb  rdf-auxilary.ads  rdf-auxiliary-c_pointers.ads  rdf-auxiliary-c_string_holders.adb  rdf-auxiliary-c_string_holders.ads  rdf-auxiliary-convert.adb  rdf-auxiliary-convert.ads  rdf-auxiliary-convert_void.adb  rdf-auxiliary-convert_void.ads  rdf-auxiliary-handled_record.adb  rdf-auxiliary-handled_record.ads  rdf-auxiliary-limited_handled_record.adb  rdf-auxiliary-limited_handled_record.ads  rdf-auxiliary-my_indefinite_holders.adb  rdf-auxiliary-my_indefinite_holders.ads  rdf-auxiliary.adb  rdf-auxiliary.ads  rdf-base.adb  rdf-base.ads  rdf-raptor-bnode.adb  rdf-raptor-bnode.ads  rdf-raptor-constants.adb  rdf-raptor-constants.ads  rdf-raptor-internal.ads  rdf-raptor-iostream.adb  rdf-raptor-iostream.ads  rdf-raptor-log.adb  rdf-raptor-log.ads  rdf-raptor-memory.adb  rdf-raptor-memory.ads  (+84 more)
csharp/: .cvsignore  AssemblyInfo.cs  ChangeLog  Errors.cs  HACKING  HashStorage.cs  IWrapper.cs  Iterator.cs  LICENSE  Makefile.am  MemoryStorage.cs  Model.cs  Node.cs  Parser.cs  Query.cs  QueryResults.cs  README  Redland.cs  Serializer.cs  Statement.cs  Storage.cs  Stream.cs  TODO  Uri.cs  Util.cs  World.cs  redland.pub  test.cs
csharp/examples/: .cvsignore  EncodingTest.cs  GetsTest.cs  Makefile.am  ModelGeneralTest.cs  ModelTest.cs  SimpleGetsTest.cs  StreamTest.cs  TemplateTest.cs  example1.cs  example2.cs  example3.cs  example4.cs
dlang/: Makefile.am  TODO.txt  dub-install.json.in  dub.json
dlang/source/: main.d  rdf_test.d
dlang/src/: rdf.d  rdf_test.d
docs/: .cvsignore  .gitignore  Makefile.am  README.html  csharp.html  fix-pod-xhtml  fix-python-xhtml  fix-rdoc-xhtml  java.html  objc.html  perl.html  php.html  python.html  r.html  ruby.html  tcl.html
docs/ada/: Makefile.am  ada-bindings.html  ada-bindings.odt
java/: .cvsignore  Makefile.am  example.java  redland-fragment.java  run-java  skeleton.java  test1.java  test2.java
java/org/: Makefile.am
lua/: .gitignore  Makefile.am  test.lua
perl/: .cvsignore  .gitignore  MANIFEST  MANIFEST.SKIP  Makefile.PL  Makefile.am  README.txt  example.pl  redland-decl.i  redland-post.i  redland-pre.i  rss-dump.pl  serialize.pl
perl/lib/: Makefile.am
perl/t/: Makefile.am  test1.t  test2.t  test3.t
php/: .cvsignore  .gitignore  Makefile.am  php.ini  redland-decl.i  redland-init.i  redland-post.i  redland-pre.i  redland-typemap.i  redland_wrap.c.patch  test.php
python/: .cvsignore  .gitignore  Makefile.am  RDF.py  README  example-fetch-and-save.py  example-retrieve-from-saved.py  example.py  filter.py  redland-decl.i  redland-post.i  redland-pre.i  redland-typemap.i  redlandtest.py  setup-win32.py
python/test/: Makefile.am  test.py
ruby/: .cvsignore  .gitignore  Makefile.am  README.txt  core.rb  example.rb  rdf-redland.gemspec  redland-pre.i  redland-types.i  test.rb
ruby/lib/: Makefile.am  rdf.rb
ruby/test/: .cvsignore  .gitignore  Makefile.am  README  ical.rdf  one.nt  test_model.rb  test_node.rb  test_parser.rb  test_query.rb  test_rdf.rb  test_rdfs_resource.rb  test_resource.rb  test_serializer.rb  test_statement.rb  test_store.rb  test_uri.rb  triples.rdf
tcl/: .cvsignore  Makefile.am  example.tcl  redland-init.i  redland-pre.i  test.tcl
(+355 files in other folders)
